corrected photo gallery image gap

--- a/main.css
+++ b/main.css
@@ -437,9 +437,10 @@ nav {padding: 2em 0;}
         .photos div {
             display: inline-block;
             vertical-align: text-top;
+            font-size: 0;
                 }
-        .col100 { width: 49%;}
-        .col50 div, .col50 {width: 49%;}
+        .col100 { width: 50%;}
+        .col50 div, .col50 {width: 50%;}
         
      /* photos page ends */
     footer {
